--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dayjs": "^1.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "style-components": "^0.1.0",
     "styled-components": "^5.3.5"
   },
   "scripts": {
